--- a/src/SarifWeb.UnitTests/packages.config
+++ b/src/SarifWeb.UnitTests/packages.config
@@ -1,17 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.3.1" targetFramework="net452" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
   <package id="FluentAssertions" version="5.10.3" targetFramework="net461" />
-  <package id="Moq" version="4.9.0" targetFramework="net452" />
-  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
-  <package id="xunit" version="2.4.0" targetFramework="net452" />
-  <package id="xunit.abstractions" version="2.0.2" targetFramework="net452" />
+  <package id="Moq" version="4.16.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="xunit" version="2.4.1" targetFramework="net461" />
+  <package id="xunit.abstractions" version="2.0.3" targetFramework="net461" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net452" />
-  <package id="xunit.assert" version="2.4.0" targetFramework="net452" />
-  <package id="xunit.core" version="2.4.0" targetFramework="net452" />
-  <package id="xunit.extensibility.core" version="2.4.0" targetFramework="net452" />
-  <package id="xunit.extensibility.execution" version="2.4.0" targetFramework="net452" />
-  <package id="xunit.runner.console" version="2.4.0" targetFramework="net452" developmentDependency="true" />
-  <package id="xunit.runner.visualstudio" version="2.4.0" targetFramework="net452" developmentDependency="true" />
+  <package id="xunit.assert" version="2.4.1" targetFramework="net461" />
+  <package id="xunit.core" version="2.4.1" targetFramework="net461" />
+  <package id="xunit.extensibility.core" version="2.4.1" targetFramework="net461" />
+  <package id="xunit.extensibility.execution" version="2.4.1" targetFramework="net461" />
+  <package id="xunit.runner.console" version="2.4.1" targetFramework="net461" developmentDependency="true" />
+  <package id="xunit.runner.visualstudio" version="2.4.3" targetFramework="net461" developmentDependency="true" />
 </packages>
