--- a/.github/workflows/eslint-analysis.yml
+++ b/.github/workflows/eslint-analysis.yml
@@ -22,8 +22,6 @@ jobs:
           
       - name: Run ESLint
         run: npx eslint .
-             --config .eslintrc.js
-             --ext .js,.jsx,.ts,.tsx
              --format @microsoft/eslint-formatter-sarif 
              --output-file eslint.sarif
         continue-on-error: true
@@ -33,7 +31,7 @@ jobs:
         with:
           sarif_file: eslint.sarif
           
-      - name: Upload eslint results as artifact
+      - name: Upload ESLint results as artifact
         uses: actions/upload-artifact@v2
         with:
           name: eslint-result
