Add x-frame-options header

--- a/src/SarifWeb/Web.config
+++ b/src/SarifWeb/Web.config
@@ -6,5 +6,10 @@
         <requestLimits maxAllowedContentLength="1073741824" />
       </requestFiltering>
     </security>
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Frame-Options" value="SAMEORIGIN" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
 </configuration>
