--- a/src/SarifWeb/Web.config
+++ b/src/SarifWeb/Web.config
@@ -8,7 +8,7 @@
     </security>
     <httpProtocol>
       <customHeaders>
-        <add name="X-Frame-Options" value="SAMEORIGIN" />
+        <add name="X-Frame-Options" value="DENY" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
