--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -24,10 +24,12 @@
     <None Include="wwwroot\images\logos\GitHub.png" />
     <None Include="wwwroot\images\logos\GrammaTech.png" />
     <None Include="wwwroot\images\logos\KestrelTechnology.png" />
+    <None Include="wwwroot\images\logos\ForAllSecure.png" />
     <None Include="wwwroot\images\logos\MicroFocus.png" />
     <None Include="wwwroot\images\logos\Microsoft.png" />
     <None Include="wwwroot\images\logos\SWAMP.png" />
     <None Include="wwwroot\images\Nuget.png" />
+    <None Include="wwwroot\images\Sonar.png" />
     <None Include="wwwroot\images\screenshots\VSCodeViewer.png" />
     <None Include="wwwroot\images\screenshots\VSCodeViewer.thumbnail.png" />
     <None Include="wwwroot\images\screenshots\VSViewer.png" />
