--- a/src/SarifWeb/SarifWeb.csproj
+++ b/src/SarifWeb/SarifWeb.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -23,11 +23,9 @@
   <ItemGroup>
     <None Include="wwwroot\images\logos\GitHub.png" />
     <None Include="wwwroot\images\logos\GrammaTech.png" />
-    <None Include="wwwroot\images\logos\KestrelTechnology.png" />
     <None Include="wwwroot\images\logos\ForAllSecure.png" />
     <None Include="wwwroot\images\logos\MicroFocus.png" />
     <None Include="wwwroot\images\logos\Microsoft.png" />
-    <None Include="wwwroot\images\logos\SWAMP.png" />
     <None Include="wwwroot\images\Nuget.png" />
     <None Include="wwwroot\images\Sonar.png" />
     <None Include="wwwroot\images\screenshots\VSCodeViewer.png" />
