Add component governance check

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,3 +10,5 @@ steps:
     command: 'build'
     projects: src/SarifWeb.sln
     configuration: 'Release'
+
+- task: ComponentGovernanceComponentDetection@0
