--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,11 +4,33 @@ pr:
 pool:
   vmImage: 'windows-latest'
 
-steps:
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'build'
-    projects: src/SarifWeb.sln
-    configuration: 'Release'
+  resources:
+    repositories:
+      - repository: 1esPipelines
+        type: git
+        name: 1ESPipelineTemplates/1ESPipelineTemplates
+        ref: refs/tags/release
+  extends:
+      template: v1/1ES.Unofficial.PipelineTemplate.yml@1esPipelines
+      parameters:
+        pool:
+          name: 1ES-Shared-Hosted-Pool_Windows-Server-2022
+          os: windows
+        containers:
+          default_windows_container:
+            image: mcr.microsoft.com/windows/servercore:ltsc2022
+          
+        stages:
+        - stage: build
+          jobs:
+          - job: build
+  
 
-- task: ComponentGovernanceComponentDetection@0
+            steps:
+            - task: DotNetCoreCLI@2
+              inputs:
+                command: 'build'
+                projects: src/SarifWeb.sln
+                configuration: 'Release'
+
+            - task: ComponentGovernanceComponentDetection@0
