--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,11 @@ extends:
 
 
           steps:
-          
+          - task: UseDotNet@2
+            displayName: 'Use .NET Core sdk'
+            inputs:
+              packageType: sdk
+              version: 5.0.x
           - task: DotNetCoreCLI@2
             inputs:
               command: 'build'
