--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,3 +40,5 @@ extends:
               command: 'build'
               projects: src/SarifWeb.sln
               configuration: 'Release'
+
+          - task: ComponentGovernanceComponentDetection@0
