--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ extends:
           inputs:
           - input: checkout
             repository: self
-            submodules: true
+            displayName: build
           outputs:
           - output: pipelineArtifact
             targetPath: $(System.DefaultWorkingDirectory)
